# cmake_template

./: CMakeLists.txt  readme.md
include/: common.h
src/: CMakeLists.txt  compute.c
src/tests/: CMakeLists.txt  helloworld.c
template/: CMakeLists.txt
template/src/tests/: CMakeLists.txt  helloworld.c
